<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_listado_alumnos"
            android:icon="@drawable/ic_listado_alumnos_foreground"
            android:title="@string/menu_listado_alumnos" />
        <item
            android:id="@+id/nav_alta_alumno"
            android:icon="@drawable/ic_alta_alumno_foreground"
            android:title="@string/menu_alta_alumno" />
        <item
            android:id="@+id/nav_baja_alumno"
            android:icon="@drawable/ic_baja_alumno_foreground"
            android:title="@string/menu_baja_alumno" />
    </group>
</menu>
