<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/tvDniLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_Dni"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/ivFoto" />

    <TextView
        android:id="@+id/tvDniRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDniLabel"
        app:layout_constraintEnd_toStartOf="@+id/tvNombreLabel"
        app:layout_constraintStart_toEndOf="@+id/tvDniLabel" />

    <TextView
        android:id="@+id/tvNombreLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_Nombre"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDniLabel"
        app:layout_constraintStart_toEndOf="@+id/tvDniRes" />

    <TextView
        android:id="@+id/tvNombreRes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDniLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNombreLabel" />

    <TextView
        android:id="@+id/tvFechaNacLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_FechaNacLabel"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvDniLabel" />

    <TextView
        android:id="@+id/tvFechaNacRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="24dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFechaNacLabel"
        app:layout_constraintEnd_toStartOf="@+id/tvCicloLabel"
        app:layout_constraintStart_toEndOf="@+id/tvFechaNacLabel" />

    <TextView
        android:id="@+id/tvCicloLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_Ciclo"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFechaNacLabel"
        app:layout_constraintStart_toEndOf="@+id/tvFechaNacRes" />

    <TextView
        android:id="@+id/tvCicloRes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFechaNacLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvCicloLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>